--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,13 @@
     --text: #fff;
 }
 
+/* body.dark {
+    --bg-primary: #f8f8f8!important;
+    --bg-secondary: #e1e1e7!important;
+    --primary: #ea9502!important;
+    --text: #000000!important;
+} */
+
 * {
     font-family: 'Poppins';
 }
